fix signup button alignment

--- a/src/css/EmailBox.module.css
+++ b/src/css/EmailBox.module.css
@@ -27,7 +27,7 @@
   margin-left: -25%;
   padding: 1px;
   position: relative;
-  bottom: 3px;
+  bottom: 2px;
   border: none;
 }
 
